--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,28 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="container">
+      <!-- <form id="form">
+        <label
+          >Name
+          <input
+            type="text"
+            name="name"
+            placeholder="Enter your name"
+            class="input"
+          />
+        </label>
+        <label
+          >Age
+          <input
+            type="number"
+            name="age"
+            placeholder="Enter your age"
+            class="input"
+          />
+        </label>
+        <button type="submit" id="btn">Submit</button>
+      </form> -->
+    </div>
   </body>
 </html>
